--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.9.12 || ^5.0.0-alpha.22",
