--- a/server/package.json
+++ b/server/package.json
@@ -27,12 +27,10 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
     "pino": "^6.11.0"
   },
   "devDependencies": {
@@ -43,12 +41,18 @@
     "@types/pino": "^6.3.5",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
-    "eslint": "^7.19.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "7.5.4"
   }
 }
