--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,9 @@
     "express-validator": "^6.10.0",
     "mongoose": "^5.11.14",
     "morgan": "^1.10.0",
-    "pino": "^6.11.0"
+    "pino": "^6.11.0",
+    "swagger-jsdoc": "^6.0.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -40,6 +42,8 @@
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/pino": "^6.3.5",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.22.0",
