--- a/server/.env.example
+++ b/server/.env.example
@@ -2,7 +2,6 @@ NODE_ENV=dev
 PORT=8080
 
 MONGODB_URI_LOCAL=mongodb://localhost:27017/omdb_project
-#MONGODB_URI=mongodb://mongo:27017/omdb_project
 
-#OMDB_API_KEY=
+OMDB_API_KEY=
 OMDB_BASE_URL=http://www.omdbapi.com/
