--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,14 @@
     "dev": "nodemon src/server.ts",
     "build": "tsc -p .",
     "start": "npm run build && node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --no-cache --verbose --setupFiles dotenv/config"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/tests/setup.ts"
+    ]
   },
   "repository": {
     "type": "git",
@@ -40,8 +47,10 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/morgan": "^1.9.2",
     "@types/pino": "^6.3.5",
+    "@types/supertest": "^2.0.10",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -51,7 +60,11 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.6",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
